# tos

./: .clippy.toml  .dockerignore  .env.example  .gitignore  AGENT-ACCOUNT-PROTOCOL.md  AWAIT_LOCK_FIXES.md  BOUNTY.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODE_COMPLETENESS_AUDIT.md  COMPACT_BLOCKS_IMPLEMENTATION.md  CONSENSUS_FIX_MINER_REWARD_HANDLING.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  ENTRY_POINT_ENCODING_SPEC.md  FUTURE_TESTS_IMPLEMENTATION_REPORT.md  GHOSTDAG_JSON_TEST_INFRASTRUCTURE.md  INTEGRATION_REVIEW.md  LICENSE  MULTI_CLIENT_ALIGNMENT.md  MULTI_CLIENT_ALIGNMENT_SCHEME.md  P0_IMPLEMENTATION_PROGRESS.md  P0_TASKS_COMPLETE.md  PARALLEL_EXECUTION_ADAPTER_DESIGN.md  PARALLEL_EXECUTION_CODE_REVIEW.md  PARALLEL_EXECUTION_IMPLEMENTATION_STATUS.md  PARALLEL_EXECUTION_REVIEW_SUMMARY.md  PARALLEL_EXECUTION_VALIDATION_ARCHITECTURE.md  PARALLEL_TX_REVIEW.md  PERFORMANCE_BENCHMARKS_REPORT.md  PERFORMANCE_BENCHMARK_RESULTS.md  PERFORMANCE_BENCHMARK_SUMMARY.md  PR_BOOTSTRAP_NODES.md  Parallel_Execution_Security_Review.md  README.md  RUNTIME_TOGGLE_VERIFICATION_REPORT.md  SECURITY.md  (+25 more)
ai_miner/: Cargo.toml  README.md  ai_mining_demo.py  ai_mining_test.py  ai_mining_test_result.json  improved_ai_mining_demo.py  sample-config.json  secure_ai_mining_demo.py  simple_ai_test.py  simple_ai_test_result.json
ai_miner/src/: config.rs  daemon_client.rs  integration_tests.rs  lib.rs  main.rs  storage.rs  transaction_builder.rs
ai_miner/tests/: ai_mining_workflow_tests.rs  secure_ai_mining_tests.rs
common/: Cargo.toml  build.rs
common/benches/: batch_1000_txs.rs  homomorphic_encryption.rs  parallel_batch.rs  proofs.rs
common/src/: asset.rs  config.rs  context.rs  difficulty.rs  doc_test_helpers.rs  error.rs  immutable.rs  lib.rs  network.rs  queue.rs  time.rs  utils.rs  varuint.rs  versioned_type.rs
common/tests/: spec_wire_format_vectors.rs  wire_format.json
cores/: Cargo.toml
cores/src/: authority.rs  base_types.rs  client.rs  committee.rs  downloader.rs  error.rs  generate_format.rs  lib.rs  messages.rs  serialize.rs  tos_smart_contract.rs  validator.rs  validators.rs
cores/tests/: format.rs
daemon/: BENCHMARK_RESULTS.md  BOOTSTRAP_NODE.md  BOOTSTRAP_NODE_DEPLOYMENT.md  Cargo.toml  EXECUTION_LOGGING_VERIFICATION.md  MIGRATION_SUMMARY.md  PERFORMANCE_BENCHMARKS.md  README.md  STORAGE_MIGRATION.md  SYNC_OPTIONS.md  build.rs  quick_fix_cargo.sh  server_setup_tos_node.sh  setup_testnet_daemon.sh  setup_tos_reverse_proxy.sh
daemon/benches/: BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.txt  README.md  README_PARALLEL_EXECUTION.md  README_PARALLEL_TPS.md  block_processing.rs  e2e_tps.rs  ghostdag.rs  mempool_stress.rs  parallel_execution.rs  parallel_tps_comparison.rs  security_benchmarks.rs  tps.rs  transaction.rs  transaction_throughput.rs  tx_size_analysis.rs
daemon/examples/: test_tako_jit.rs  test_tako_jit_simple.rs
daemon/fuzz/: Cargo.toml
daemon/src/: config.rs  doc_test_helpers.rs  lib.rs  main.rs
daemon/tests/: AAVE_V3_INSTRUCTION_FORMAT.md  DEFI_INTEGRATION_TESTS_README.md  README.md  SECURITY_TESTING_GUIDE.md  SECURITY_TEST_SUMMARY.md  a2a_apply_state.rs  a2a_arbitration_flow_test.rs  agent_account_rpc_test.rs  arbiter_e2e_test.rs  batch_operations_e2e_test.rs  boundary_tests_rocksdb.rs  bug073_atomic_rollback_test.rs  bug074_cache_persistence_test.rs  codex_security_audit_tests.rs  committee_hierarchy_test.rs  conflict_detection_tests_rocksdb.rs  contract_asset_delegation_chain_test.rs  contract_asset_integration_test.rs  contract_asset_rocksdb_test.rs  create2_frontrunning_test.rs  daa_integration.rs  defi_aave_storage_test.rs  defi_aave_v3_integration_test.rs  defi_mock_storage.rs  defi_uniswap_v2_integration_test.rs  defi_uniswap_v3_integration_test.rs  defi_usdc_integration_test.rs  defi_usdt_integration_test.rs  edge_case_tests_rocksdb.rs  escrow_auto_release_test.rs  escrow_lifecycle_test.rs  escrow_rpc_test.rs  integration_tests.rs  kyc_adversarial_test.rs  kyc_bug_regression_test.rs  kyc_comprehensive_scenario_test.rs  kyc_e2e_test.rs  kyc_edge_cases_test.rs  kyc_security_regression_test.rs  kyc_security_test.rs  (+59 more)
genesis/: Cargo.toml
genesis/src/: main.rs  test_genesis.rs  verify_genesis.rs
metrics/dashboard/: Cargo.toml  README.md
metrics/perf_monitor/: Cargo.toml  README.md
metrics/stat_recorder/: Cargo.toml  README.md
miner/: Cargo.toml  MINER_GUIDE.md  miner_control.sh  setup_miner.sh  tos-miner.service
miner/src/: config.rs  main.rs
ta/: Cargo.toml
ta/src/: main.rs
tck/: Cargo.toml  MULTI_CLIENT_ALIGNMENT_SCHEME.md  README.md  vrf_private_key.hex
tck/benches/: block_benchmark.rs  dag_benchmark.rs  sync_benchmark.rs  tps_benchmark.rs
tck/blockdag/: Cargo.toml  blockdag_cumulative_diff.yaml  blockdag_difficulty.yaml  blockdag_fork_choice.yaml  blockdag_height.yaml  blockdag_sorting.yaml  gen_cumulative_diff_vectors.rs  gen_difficulty_vectors.rs  gen_fork_choice_vectors.rs  gen_height_vectors.rs  gen_sorting_vectors.rs
tck/conformance/: README.md  docker-compose.yml
tck/contracts/: Cargo.toml  build.sh
tck/crypto/: Cargo.toml  check_gens.rs  dump_proof.rs  gen_aes_gcm_vectors.rs  gen_arbitration_vectors.rs  gen_base58_vectors.rs  gen_basic_vectors.rs  gen_bech32_vectors.rs  gen_bigint_vectors.rs  gen_blake3_vectors.rs  gen_bls12_381_vectors.rs  gen_bn254_vectors.rs  gen_chacha20_poly1305_vectors.rs  gen_chacha20_vectors.rs  gen_curve25519_vectors.rs  gen_ed25519_point_vectors.rs  gen_ed25519_vectors.rs  gen_escrow_vectors.rs  gen_hmac_vectors.rs  gen_keccak256_vectors.rs  gen_poseidon_vectors.rs  gen_rangeproofs_table.rs  gen_rangeproofs_vectors.rs  uno.yaml  (+12 more)
testing-framework/: .gitignore  CHANGELOG.md  CI_SETUP.md  CONTRACT_TESTING.md  Cargo.toml  ERC20_INTEGRATION_TESTS.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  RECENT_IMPROVEMENTS.md  SESSION_SUMMARY_v3.0.6.md  SESSION_SUMMARY_v3.1.0_FINAL.md  TIER4_CHAOS_USAGE.md  WAITER_PRIMITIVES_README.md
testing-integration/: Cargo.toml  MIGRATION_REPORT.md  TESTING_GUIDE.md  USAGE_EXAMPLE.md
tos/: Cargo.toml
wallet/: Cargo.toml  wallet_history.csv
(+1541 files in other folders)
