[workspace]
resolver = "2"

members = [
    "common",
    "wallet",
    "miner",
    "daemon",
    "genesis",
    "ai_miner",
    "testing-framework"]

[workspace.dependencies]
metrics = "0.24.2"
anyhow = "1"
thiserror = "2"
log = "0.4"
lru = "0.15"
hex = { version = "0.4.3", features = ["serde"] }
async-trait = "0.1.77"
chrono = "0.4.38"
chacha20poly1305 = { version = "0.11.0-rc.0", features = ["rand_core"] }
futures = "0.3.31"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde_json = "1"
tokio = "1"
actix-web = "4"
futures-util = "0.3.30"
clap = { version = "4.5.2", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
strum = { version = "0.27.1", features = ["derive"] }
sha3 = "0.10"
cfg-if = "1"
rustls = { version = "0.23", default-features = true }
tokio-tungstenite-wasm = { version = "0.6.0", features = ["rustls-tls-webpki-roots"] }
siphasher = "1.0"
primitive-types = { version = "0.13.1", features = ["serde"] }
dashmap = "5.5"

# cargo run --profile release-with-lto
[profile.release-with-lto]
inherits = "release"
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
strip = true
