[workspace]
resolver = "2"

members = [
    "common",
    "wallet",
    "miner",
    "daemon",
    "genesis",
    "tck",
    "ta",
    ]

[workspace.dependencies]
metrics = "0.24.2"
anyhow = "1"
thiserror = "2"
log = "0.4"
lru = "0.15"
hex = "0.4.3"
async-trait = "0.1.77"
chrono = "0.4.38"
chacha20poly1305 = "0.11.0-rc"
siphasher = "1.0"
futures = "0.3.31"
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1"
tokio = "1"
actix-web = "4"
futures-util = "0.3.30"
clap = { version = "4.5.2", features = ["derive", "env"] }
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
strum = { version = "0.27.1", features = ["derive"] }
sha3 = "0.10"
cfg-if = "1"
rustls = { version = "0.23", default-features = true }
tokio-tungstenite-wasm = { version = "0.6.0", features = ["rustls-tls-webpki-roots"] }

# cargo run --profile release-with-lto
[profile.release-with-lto]
inherits = "release"
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
strip = true

# Patch crates.io dependencies to use TOS forks
# This ensures type compatibility across all crates (schnorrkel, ed25519-dalek, etc.)
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/tos-network/curve25519-dalek", rev = "0ca0e1a1cab7c08733e35cfedc33fc68db2058be" }