[package]
name = "tos_ai_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
tos_common = { path = "../common", features = ["prompt"] }
indexmap = "2.0"
rand = "0.8"
hex = "0.4"
blake3 = "1.5.1"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.fern]
version = "0.7"
features = ["colored"]