[package]
name = "tos_common"
version = "0.1.11"
edition = "2021"
authors = ["TOS Network Team <info@tos.network>"]
license = "BSD-3-Clause"
description = "TOS Network common library"
repository = "https://github.com/tos-network/tos"
homepage = "https://tos.network"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tos-hash = { git = "https://github.com/tos-network/tos-hash", rev = "b661e5a" }
# TOS Kernel - Simplified re-export crate in TAKO
tos-kernel = { git = "https://github.com/tos-network/tako", rev = "4c9a2c6" }
# TOS Crypto - Unified cryptographic primitives (curve25519-dalek, bulletproofs, merlin)
# Features: uno = ecdlp (balance decryption) + zk-proofs (bulletproofs + merlin), vrf = VRF support
tos-crypto = { git = "https://github.com/tos-network/tos-crypto", rev = "abb56b0", features = ["uno", "vrf"] }
blake3 = "1.5.1"
zeroize = { version = "1.7.0", features = ["derive"] }
sha3 = "0.10.8"
# HMAC-SHA256 for callback signature (TIP-QR-PAYMENT)
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
fern = { version = "0.7.1", features = ["colored", "date-based"] }

reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"], optional = true }
rustls = { workspace = true, optional = true }
crossterm = { version = "0.29.0", optional = true }
actix-rt = { version = "2.9.0", optional = true }
actix-ws = { version = "0.3.0", optional = true }
zip = { version = "4", features = ["zstd"], default-features = false, optional = true }
pin-project-lite = { version = "0.2.16", optional = true }
console-subscriber = { version = "0.4.1", optional = true }

# WebSocket support
tokio-tungstenite-wasm = { workspace = true, optional = true }

lazy_static = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chacha20poly1305 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
indexmap = { workspace = true }
async-trait = { workspace = true }
cfg-if = { workspace = true }
siphasher = { workspace = true }

chrono = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

# Query system
regex = "1"
# URL encoding for payment URIs
urlencoding = "2.1"
# Query system
serde_regex = "1.1.0"
# Used for U256
primitive-types = { version = "0.13.1", features = ["serde"] }
chacha20 = "0.9.1"
better_any = "0.2.0"
log-panics = { version = "2", features = ["with-backtrace"]}

[target.armv7-unknown-linux-gnueabihf.dependencies]
# TODO: remove once fixed https://github.com/cross-rs/cross/issues/1689
aws-lc-sys = { version = "0.30", features = ["bindgen"] }

[target.'cfg(windows)'.dependencies]
win32console = "0.1.5"

# Tokio dependency for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
# We need both crates version to support the WASM/JS
# NOTE: You must set `RUSTFLAGS='--cfg getrandom_backend="wasm_js"'` when building
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
tokio_with_wasm = { version = "0.8.6", features = ["macros", "sync", "time", "rt"], optional = true }

# dependencies for non-WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["macros", "signal", "time", "sync", "rt"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
criterion = "0.6.0"
rayon = "1.8"
proptest = "1.4"

[features]
tokio = ["dep:tokio", "dep:tokio_with_wasm", "dep:futures", "dep:pin-project-lite"]
tokio-multi-thread = ["tokio", "tokio/rt-multi-thread", "tokio_with_wasm/rt-multi-thread"]
# Debug-mode deadlock detection wrappers (includes .expect() for diagnostics)
# Default: disabled (production uses direct tokio re-exports with zero overhead)
# Enable for development: cargo build --features tos_common/deadlock-detection
deadlock-detection = ["tokio"]

rustls = ["dep:rustls"]
rpc = ["dep:metrics"]
rpc-client = ["rpc", "tokio", "dep:reqwest", "rustls", "dep:futures-util", "dep:tokio-tungstenite-wasm"]
rpc-server = ["rpc", "dep:actix-rt", "dep:actix-web", "dep:actix-ws", "dep:futures-util", "tokio", "dep:reqwest", "rustls"]

clap = ["dep:clap"]
prompt = ["clap", "tokio", "dep:crossterm", "dep:chrono", "dep:zip"]
tracing = ["dep:console-subscriber", "tokio", "tokio/tracing"]

[lib]
crate-type = ["cdylib", "rlib"]

# Balance simplification: Benchmark disabled (proofs removed)
# [[bench]]
# name = "proofs"
# harness = false

# Balance simplification: Benchmark disabled (encrypt() removed)
# [[bench]]
# name = "homomorphic_encryption"
# harness = false

# Balance simplification: Benchmark disabled (proofs removed)
# [[bench]]
# name = "batch_1000_txs"
# harness = false

# Balance simplification: Benchmark disabled (encrypt() removed)
# [[bench]]
# name = "parallel_batch"
# harness = false
