[package]
name = "cores"
version = "0.1.0"
authors = ["Info <info@tos.network>"]
publish = false
edition = "2021"

[dependencies]
base58 = "0.2.0"
bcs = "0.1.3"
bincode = "1.3.1"
failure = "0.1.8"
futures = "0.3.5"
rand = "0.8"
rand_core = { version = "0.6.4", default-features = false, optional = true }
serde = { version = "1.0.115", features = ["derive"] }
tokio = { version = "0.2.22", features = ["full"] }
ed25519 = { version = "2.2.2" }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "batch", "pkcs8", "serde"] }
serde-name = "0.1.2"
structopt = "0.3.21"

[dev-dependencies]
similar-asserts = { version = "1.1.0" }
serde-reflection = "0.3.2"
serde_yaml = "0.8.17"

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

