[package]
name = "tos_daemon"
version = "0.1.13"
edition = "2021"
authors = ["TOS Network Team <info@tos.network>"]
license = "BSD-3-Clause"
description = "TOS Network blockchain daemon"
repository = "https://github.com/tos-network/tos"
homepage = "https://tos.network"
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tos_common = { path = "../common", features = ["prompt", "clap", "rpc-server", "tokio"] }

# TOS Kernel - TOS Kernel(TAKO) runtime
tos-kernel = { package = "tos-kernel", git = "https://github.com/tos-network/tako", branch = "main" }
tos-program-runtime = { package = "tos-program-runtime", git = "https://github.com/tos-network/tako", branch = "main" }
tos-syscalls = { package = "tos-syscalls", git = "https://github.com/tos-network/tako", branch = "main" }
tako-sdk = { package = "tako-sdk", git = "https://github.com/tos-network/tako", branch = "main" }
tos-tbpf = { git = "https://github.com/tos-network/tbpf", rev = "03bc48b", features = ["jit"] }
tos-environment = { package = "tos-environment", git = "https://github.com/tos-network/tako", branch = "main" }

# TOS Crypto - VRF support for block producers
tos-crypto = { git = "https://github.com/tos-network/tos-crypto", rev = "abb56b0", features = ["vrf"] }

# Database backends
sled = "0.34.7"
rocksdb = "0.23.0"

# Used for Diffie-Hellman key exchange in p2p
x25519-dalek = { version = "2.0.1", features = ["serde", "zeroize", "static_secrets"] }

xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
metrics-exporter-prometheus = "0.17.0"
semver = "1.0.23"
itertools = "0.14.0"
linked-hash-map = "0.5.6"
dashmap = "6.1"
bytes = "1"
humantime = "2.1.0"
human_bytes = "0.4.2"
tokio-socks = "0.5.2"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json"] }
env_logger = "0.11"
tempdir = "0.3"
once_cell = "1.20"

# BlockDAG dependencies
primitive-types = { version = "0.12", features = ["serde"] }
bincode = "1.3"

# Common dependencies
actix-web = { workspace = true }
strum = { workspace = true }
clap = { workspace = true }
lru = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
chacha20poly1305 = { workspace = true, features = ["bytes"]}
metrics = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "io-std", "time", "macros", "sync", "net"] }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
sha3 = "0.10"

[lib]
name = "tos_daemon"
path = "src/lib.rs"

[dev-dependencies]
tempdir = "*"
criterion = "0.6.0"
rayon = "1.8"
sysinfo = "0.32"
tos-tck = { path = "../tck" }
tos-crypto = { git = "https://github.com/tos-network/tos-crypto", rev = "abb56b0", features = ["uno"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
libsecp256k1 = { version = "0.7", features = ["hmac"] }
sha3 = "0.10"
rand = "0.8"
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }

[[bin]]
name = "tps_benchmark"
path = "benches/transaction_throughput.rs"

[[bench]]
name = "tps"
harness = false

[[bench]]
name = "security_benchmarks"
harness = false
