[package]
name = "tos_genesis"
version = "0.1.16"
edition = "2021"
authors = ["TOS Network Team <info@tos.network>"]
license = "BSD-3-Clause"
description = "TOS Network genesis block generator"
repository = "https://github.com/tos-network/tos"
homepage = "https://tos.network"

[[bin]]
name = "tos_genesis"
path = "src/main.rs"

[[bin]]
name = "verify_genesis"
path = "src/verify_genesis.rs"

[[bin]]
name = "test_genesis"
path = "src/test_genesis.rs"

[dependencies]
tos_common = { path = "../common" }
indexmap = "2.0"
hex = "0.4" 