[package]
name = "tos_miner"
version = "0.1.12"
edition = "2021"
authors = ["TOS Network Team <info@tos.network>"]
license = "BSD-3-Clause"
description = "TOS Network mining program"
repository = "https://github.com/tos-network/tos"
homepage = "https://tos.network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tos_common = { path = "../common", features = ["prompt", "clap"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }

# Common dependencies
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
clap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["api_stats"]
api_stats = []