[package]
name = "ta"
version = "0.1.0"
edition = "2021"
description = "TOS Admin - Daemon Control Tool"
authors = ["TOS Network"]
license = "MIT"

[[bin]]
name = "ta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
