[package]
name = "tos-testing-framework"
version = "0.1.0"
edition = "2021"
authors = ["TOS Network Team"]
description = "Comprehensive testing framework for TOS blockchain - V3.0 Production-Ready"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
anyhow = "1.0"
rand = "0.8"
parking_lot = "0.12"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
proptest = "1.4"
futures = "0.3"
tracing = "0.1"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
textwrap = "0.16"

# TOS dependencies for TestBlockchain
tos_common = { path = "../common" }
tos_daemon = { path = "../daemon" }

# TAKO dependencies for contract testing
# Updated to rev e8d3d0b (v0.2.1 - Test contracts + syscall fixes)
tos-kernel = { package = "tos-kernel", git = "https://github.com/tos-network/tako", rev = "e337dd3" }
tos-syscalls = { package = "tos-syscalls", git = "https://github.com/tos-network/tako", rev = "e337dd3" }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
env_logger = "0.11"

[features]
default = []
chaos = []
full = ["chaos"]
