[package]
name = "tos"
version = "0.1.0"
authors = ["Info <info@tos.network>"]
publish = false
edition = "2021"

[dependencies]
bytes = "0.5.6"
clap = "2.33.3"
env_logger = "0.7.1"
failure = "0.1.8"
futures = "0.3.5"
log = "0.4.11"
net2 = "0.2.34"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
structopt = "0.3"
tempfile = "3.2.0"
tokio = { version = "0.2.22", features = ["full"] }

cores = { path = "../cores" }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
