[package]
name = "tos_wallet"
version = "0.1.3"
edition = "2021"
authors = ["TOS Network Team <info@tos.network>"]
license = "BSD-3-Clause"
description = "TOS Network wallet application"
repository = "https://github.com/tos-network/tos"
homepage = "https://tos.network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tos_common = { path = "../common", features = ["tokio"] }
sled = "0.34.7"
argon2 = "0.4.1"
crc32fast = "1.3.2"
bytemuck = "1.15.0"
aes-gcm = { version = "0.11.0-rc.0", optional = true }
ed25519-dalek = { version = "2.0", optional = true }

actix-web-httpauth = { version = "0.8.0", optional = true }

# common dependencies
actix-web = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
strum = { workspace = true }
lru = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
cfg-if = { workspace = true }
sha3 = { workspace = true }
tokio-tungstenite-wasm = { workspace = true, optional = true }

# test dependencies
tempfile = { version = "3.8", optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.69", features = ["Window", "Storage", "File", "StorageManager", "FileSystemGetFileOptions", "Navigator", "FileSystemFileHandle", "FileSystemDirectoryHandle", "FileSystemWritableFileStream", "FileSystemSyncAccessHandle"] }
base64 = "0.22.1"
wasm-bindgen-futures = "0.4.43"

[features]
# Set as default dependencies until https://github.com/rust-lang/cargo/issues/4663 is resolved for binary targets
default = ["cli", "api_server", "tokio-multi-thread"]
xswd = ["tos_common/rpc", "dep:tokio-tungstenite-wasm", "dep:aes-gcm", "dep:ed25519-dalek"]
cli = ["tokio-multi-thread", "dep:clap", "tos_common/prompt"]
network_handler = ["tos_common/rpc-client"]
api_server = ["xswd", "network_handler", "tos_common/rpc-server", "dep:actix-web", "dep:actix-web-httpauth"]
tokio-multi-thread = ["tos_common/tokio-multi-thread"]

[lib]
crate-type = ["cdylib", "rlib"]
