[package]
name = "tos-daemon-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tos_daemon = { path = ".." }
tos_common = { path = "../../common" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "ghostdag_fuzzer"
path = "fuzz_targets/ghostdag_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_block_deserialize"
path = "fuzz_targets/fuzz_block_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_transaction_decode"
path = "fuzz_targets/fuzz_transaction_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_contract_bytecode"
path = "fuzz_targets/fuzz_contract_bytecode.rs"
test = false
doc = false
